# snippets

./: .gitignore  CMakeLists.txt  README.md  golang.md
io-api/: CMakeLists.txt
io-api/client/: main.cpp
io-api/epoll/: CMakeLists.txt  main.cpp
io-api/poll/: CMakeLists.txt  main.cpp
io-api/select/: CMakeLists.txt  main.cpp
select/: main.cpp
system/: CMakeLists.txt
system/cpu_tempreture/: CMakeLists.txt  win.cpp
system/program_path/: CMakeLists.txt  win.cpp
